<resources>
    <string name="app_name">FoodAppAdmin</string>
    <string name="update_stock">Update Stock</string>
    <string name="view_orders_button">View Orders Button</string>
    <string name="category">Category</string>
    <string name="item">Item</string>
    <string name="quantity_here">Quantity</string>
    <string name="update">Update</string>
    <string name="user_id">User Id</string>
    <string name="address">Address</string>
    <string name="locality">Locality</string>
    <string name="mode">Mode Of Payment</string>
    <string name="order">Order:</string>
    <string name="total">Total</string>
    <string name="process_order">Process Order</string>
    <string name="view_processed_orders">View Process Orders</string>


</resources>
